# eda_project

./: README.md  pyproject.toml  requirements.txt
eda_project/: __init__.py  eda_toolkit.py  main.py  parser.py  plots.py
eda_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: demo.csv  demo.txt
